Fixing #10: List markers break on Mac OS and Debian

--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -23,12 +23,7 @@
             margin-bottom: .2rem;
         }
         &::marker {
-            color: var(--brand-color);
-            content: "⛧";
-            font: {
-                size: 1.2rem;
-                weight: 700;
-            }
+            content: url(/images/pentagram_icon.svg);
         }
     }
 }
